framec_tests/language_specific/typescript/v3_mir/positive/transition_inline_semicolon_comment.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B(); // ok
            }
        }
}

