framec_tests/language_specific/typescript/v3_mir/negative/transition_unknown_state.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $ZZ();
            }
        }
}

